# StateBreaker

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  check.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DEMO_GUIDE_ZH.md  PROGRESS_REPORT_EN.md  PROGRESS_REPORT_ZH.md  advanced-labs.md  architecture.md  blackbox-boundaries.md  cli.md  concepts.md  contracts.md  developer-guide.md  paper-research.md  plugin-development.md  presentation-report.md
examples/bank-double-withdraw/: attack-plan.yaml  invariants.yaml  workflow.yaml
examples/coupon-race/: attack-plan.yaml  invariants.yaml  workflow.yaml
examples/payment-binding-mismatch/: authorization-attack-plan.yaml  authorization-invariants.yaml  authorization-workflow.yaml  binding-attack-plan.yaml  binding-invariants.yaml  binding-workflow.yaml
examples/payment-callback-idempotency/: attack-plan.yaml  invariants.yaml  workflow.yaml
examples/payment-step-skip/: attack-plan.yaml  invariants.yaml  workflow.yaml
examples/refund-vs-fulfill-race/: attack-plan.yaml  invariants.yaml  workflow.yaml
experiments/securify_lab7_evidence/: 08-ui-savings-source-output.json  09-viz-after-text.txt  22-money-growth-probe.json  23-money-growth-log.json  27-output-flood-log.json  30-statebreaker-browser-context-run-result.json  33-cli-help-output.txt  34-cli-render-output.txt  STATEBREAKER_BROWSER_CONTEXT_EXPLOIT.md  ex1-browser-context.json  securify7-ex1-evidence-summary.json  securify7-lab7-browser-context-plan.json  statebreaker-english-transcript-clean.txt  statebreaker-english-transcript.html  statebreaker-securify7-browser-context-executor.js  statebreaker-securify7-har-one-round-executor.js
labs/: LOCAL_RUN_ZH.md  _advanced_race_factory.py  run_local_lab.py
labs/bank-double-withdraw/: Dockerfile  compose.yaml
labs/coupon-race/: .dockerignore  Dockerfile  compose.yaml
labs/lab-advanced-approval-chain/: app.py
labs/lab-advanced-batch-settlement/: app.py
labs/lab-advanced-cart-bundle/: app.py
labs/lab-advanced-cas-profile/: app.py
labs/lab-advanced-composite-lock/: app.py
labs/lab-advanced-dedup-batch/: app.py
labs/lab-advanced-graph-edge/: app.py
labs/lab-advanced-header-body-quota/: app.py
labs/lab-advanced-ledger-transfer/: app.py
labs/lab-advanced-linked-resource/: app.py
labs/lab-advanced-onboarding-workflow/: app.py
labs/lab-advanced-priority-claim/: app.py
labs/lab-advanced-reservation-hold/: app.py
labs/lab-advanced-set-membership/: app.py
labs/lab-advanced-sharded-stock/: app.py
labs/lab-advanced-shortcode-redeem/: app.py
labs/lab-advanced-state-machine/: app.py
labs/lab-advanced-tree-quota/: app.py
labs/lab-advanced-waitlist-queue/: app.py
labs/lab-advanced-window-limit/: app.py
labs/lab-crossuser-claim/: README.md  app.py
labs/lab-oneshot-redemption/: README.md  app.py
labs/lab-overdraw/: README.md  app.py
labs/lab-quota-oversell/: README.md  app.py
labs/lab-race-appointment-slot/: README.md  app.py
labs/lab-race-coupon-claim/: README.md  app.py
labs/lab-race-idempotency-reuse/: README.md  app.py
labs/lab-race-inventory-oversell/: README.md  app.py
labs/lab-race-payment-callback/: README.md  app.py
labs/lab-race-quota-bypass/: README.md  app.py
labs/lab-race-reset-token/: README.md  app.py
labs/lab-race-seat-reservation/: README.md  app.py
labs/lab-race-vote-limit/: README.md  app.py
labs/lab-race-wallet-double-spend/: README.md  app.py
labs/lab-token-reuse/: README.md  app.py
labs/payment-step-skip/: Dockerfile  compose.yaml  requirements.txt
plugin-template/: README.md  pyproject.toml
plugin-template/src/statebreaker_plugin_template/: __init__.py  plugin.py
plugins/statebreaker-har-capture/: README.md  pyproject.toml
plugins/statebreaker-har-capture/src/statebreaker_har_capture/: __init__.py  errors.py  har_parser.py  header_normalizer.py  inference.py  normalizer.py  options.py  plugin.py  resource_filter.py  response_body.py
plugins/statebreaker-har-capture/tests/: test_coupon_race_replay.py  test_entry_exclusion.py  test_filter_integration.py  test_header_normalization.py  test_inference.py  test_manifest.py  test_normalizer.py  test_parser.py  test_plugin.py  test_required_response_body.py  test_resource_filter.py  test_step_roles.py
plugins/statebreaker-har-capture/tests/fixtures/: coupon-race-browser-noisy.har  coupon-race-normal.har  dynamic-response-values.har  invalid-json.har  minimal.har  missing-entries.har  replayable-json.har  static-resources.har
race-executor/: README.md  pyproject.toml
race-executor/src/statebreaker_race_executor/: __init__.py  cli.py  plugin.py
race-executor/tests/: test_bank_race_executor.py  test_callback_refund_executor.py  test_executor.py  test_executor_unit.py  test_payment_binding_executor.py  test_step_skip_executor.py
race-generator/: README.md  pyproject.toml
race-generator/src/statebreaker_race_generator/: __init__.py  plugin.py
race-generator/tests/: test_bank_race_generator.py  test_callback_refund_generators.py  test_generator.py  test_payment_binding_generator.py  test_step_skip_generator.py
src/statebreaker/: __init__.py  __main__.py  cli.py  documents.py  errors.py  i18n.py  models.py  pipeline.py  plugins.py  runtime.py  wizard.py
statebreaker-learner-delta/: README.md  pyproject.toml
statebreaker-learner-delta/src/statebreaker_learner_delta/: __init__.py  plugin.py  profiling.py  proposers.py  sampling.py
statebreaker-learner-delta/tests/: test_plugin.py  test_profiling.py  test_proposers.py
statebreaker-reporter-pdf/: README.md  pyproject.toml
statebreaker-reporter-pdf/src/statebreaker_reporter_pdf/: __init__.py  plugin.py
statebreaker-reporter-pdf/tests/: test_reporter.py
statebreaker-verifier-basic/: README.md  pyproject.toml
statebreaker-verifier-basic/src/statebreaker_verifier_basic/: __init__.py  plugin.py
statebreaker-verifier-basic/tests/: test_verifier.py
tests/: test_cli.py  test_i18n.py  test_models.py  test_pipeline.py  test_plugins.py  test_runtime.py  test_wizard.py
tests/artifacts/: test_store.py
(+146 files in other folders)
