[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statebreaker"
version = "0.1.0"
description = "Extensible workflow and state-evidence skeleton for authorized business-logic security testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "jsonpath-ng>=1.6,<2",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "fastapi>=0.115,<1",
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.6,<1",
  "types-PyYAML>=6,<7",
  "uvicorn>=0.30,<1",
]

[project.scripts]
statebreaker = "statebreaker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
statebreaker = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests", "labs/coupon-race/tests", "labs/payment-step-skip/tests", "labs/bank-double-withdraw/tests", "labs/payment-callback-idempotency/tests", "labs/refund-vs-fulfill-race/tests", "labs/payment-binding-mismatch/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["statebreaker"]
