[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statebreaker-plugin-template"
version = "0.1.0"
description = "Harmless dry-run plugin template for StateBreaker"
requires-python = ">=3.11"
dependencies = ["statebreaker>=0.1,<0.2"]

[project.entry-points."statebreaker.executor"]
template-dry-run = "statebreaker_plugin_template.plugin:DryRunExecutor"

[tool.setuptools.packages.find]
where = ["src"]
