[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statebreaker-learner-delta"
version = "0.1.0"
description = "Multi-sample delta learner plugin for StateBreaker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "statebreaker>=0.1,<0.2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.6,<1",
]

[project.entry-points."statebreaker.learner"]
team-delta-learner = "statebreaker_learner_delta.plugin:DeltaLearnerPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
