[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statebreaker-reporter-pdf"
version = "0.1.0"
description = "Minimal PDF reporter for StateBreaker run bundles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "statebreaker>=0.1,<0.2",
  "fpdf2>=2.7,<3",
]

[project.entry-points."statebreaker.reporter"]
team-pdf-reporter = "statebreaker_reporter_pdf.plugin:PdfReporterPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
